--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
 <p id="notice"><%= notice %></p>
+<h1><%= @post.title %></h1>
+<h2><%= @post.description %></h2>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
